--- a/styling.css
+++ b/styling.css
@@ -13,28 +13,45 @@ height: 100vh;
 overflow: hidden;
 
 }
-.gameover{
+.again{
   position: relative;
-  top: 15%;
-  width: 500px;
+  width: 150px;
+  height: 60px;
+  font-size: 50%;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color:rgb(73, 17, 7);
+  background-color: rgb(171, 171, 245);
+
+  visibility: hidden;
+  z-index: 1;
+  border-radius:25px;
+}
+.again:hover{
+  color: rgb(231, 154, 212);
+  background-color: rgb(36, 16, 36);
+}
+.gameover{
   margin: auto;
-  font-size: 4rem;
+  width: 50%;
+  top: 15%;
+  text-align:center;
+  position: relative;
+  font-size: 450%;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color:rgb(233, 174, 164); 
   visibility: hidden;
+  z-index: 1;
 }
-
-.cat{
+.catend{
   background-image: url(/images/cat.gif);
   background-repeat: no-repeat;
   background-size: cover;
-  width: 200px;
-  height:200px;
-  bottom: 0;
+  width: 120px;
+  height: 100px;
   position: absolute;
-  -webkit-transform: scaleX(-1);
-  animation: mymove 7s ease-in-out infinite;
+  animation: mymove 5s ease-in-out infinite;
 }
+
 @keyframes mymove{
   0%{
     right: -200px;
@@ -49,26 +66,52 @@ overflow: hidden;
   position: absolute;
   background-image: url(/images/mouse.gif);
   background-repeat: no-repeat;
-  background-size:contain;
-  width: 200px;
-  height:200px;
-  bottom: 0;
+  background-size:cover;
+  width: 100px;
+  height:100px;
+  bottom:0px;
+  margin: auto;
 }
 .animatemouse {
   animation: mouse 0.9s linear;
   animation-timing-function: ease;
 }
-@keyframes mouse{
+/* @keyframes mouse{
   0%{
 bottom: 0;
   }
   25%{
-  bottom: 300px;
+  bottom: 100px;
   }
   50%{
-bottom: 0;
+bottom: 200px;
   }
   100%{
-bottom: 0;
+bottom: 300px;
+  }
+} */
+
+
+.scorrr{
+  color: red;
+  font-size: 50px;
+  }
+.shooting{
+  position: absolute;
+  background-image: url(images/shooting.gif);
+  transform: rotate(50deg);
+  background-repeat: no-repeat;
+  background-size:contain;
+  width: 100px;
+  height:50px;
+  animation: star 5s ease-in-out infinite;
+}
+@keyframes star{
+  0%{
+   top:0%;
+  
+  }
+  100%{
+    top:100%;
   }
 }
